--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@distube/ytdl-core": "^4.16.12",
     "@whiskeysockets/baileys": "^6.7.19",
+    "axios": "^1.11.0",
     "express": "^5.1.0",
+    "fluent-ffmpeg": "^2.1.3",
     "qrcode-terminal": "^0.12.0",
     "sharp": "^0.34.3"
   }
