--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-"auth_info/" 
+# Ignorar sessão do WhatsApp
+auth_info/
+
+# Ignorar banco temporário
+x1.json
+
+# Ignorar dependências locais
+node_modules/
+
+# Ignorar logs
+*.log
